--- a/flask-backend/templates/index.html
+++ b/flask-backend/templates/index.html
@@ -272,7 +272,7 @@
       presence_deau: document.getElementById('presence_eau').value
     };
 
-    fetch('https://orange-robot-x4qjg4g5x772pqrw.github.dev/discovery', {
+    fetch('https://orange-robot-x4qjg4g5x772pqrw-5000.app.github.dev/discovery', {
       method: 'POST',
       headers: {
         'Content-Type': 'application/json'
